fixed overflow-x

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -11,6 +11,7 @@ body {
   background-color: "white";
   margin: 0;
   max-width: 100vw;
+  overflow-x: hidden;
 }
 
 /* NAVIGATION BAR */
